# NEXUS_AI_ASSISTANT_PRO

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nexus_llama_bridge.cpp  nexus_whisper_bridge.cpp
app/src/main/java/com/nexus/ai/: MainActivity.kt  NexusApp.kt
app/src/main/java/com/nexus/ai/core/ai/: EngineFactory.kt  FallbackLlamaEngine.kt  LlamaEngine.kt  LlmInferenceEngine.kt
app/src/main/java/com/nexus/ai/core/base/: BaseViewModel.kt  Resource.kt
app/src/main/java/com/nexus/ai/core/coroutines/: DispatcherProvider.kt
app/src/main/java/com/nexus/ai/core/database/: Converters.kt
app/src/main/java/com/nexus/ai/core/di/: Modules.kt
app/src/main/java/com/nexus/ai/core/performance/: DeviceMemoryProfileClassifier.kt
app/src/main/java/com/nexus/ai/core/security/: CryptographicEngine.kt  EncryptedDataStore.kt
app/src/main/java/com/nexus/ai/data/db/: AppDatabase.kt
app/src/main/java/com/nexus/ai/features/chat/: ChatViewModel.kt
app/src/main/java/com/nexus/ai/floating/: FloatingWindowManager.kt  NexusFloatingService.kt
app/src/main/java/com/nexus/ai/ui/: NexusNavGraph.kt
app/src/main/java/com/nexus/ai/ui/components/: AiOrb.kt  GlassCard.kt
app/src/main/java/com/nexus/ai/ui/screens/: MainChatScreen.kt
app/src/main/java/com/nexus/ai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
(+18 files in other folders)
